<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/color">
        <menu>
            <group android:checkableBehavior="single"
                android:id="@+id/color_group">
                <item android:id="@+id/red"
                    android:title="@string/color_red"/>
                <item android:id="@+id/green"
                    android:title="@string/color_green"/>
                <item android:id="@+id/blue"
                    android:title="@string/color_blue"/>
            </group>
        </menu>
    </item>
    <item android:title="@string/width">
        <menu>
            <group android:checkableBehavior="single"
                android:id="@+id/width_group">
                <item android:id="@+id/width_5"
                    android:title="@string/width_5"/>
                <item android:id="@+id/width_7"
                    android:title="@string/width_7"/>
                <item android:id="@+id/width_10"
                    android:title="@string/width_10"/>
            </group>
        </menu>
    </item>

    <item android:id="@+id/blur"
        android:checkable="true"
        android:title="@string/blur"/>
    <item android:id="@+id/emboss"
        android:checkable="true"
        android:title="@string/emboss"/>
    <item android:id="@+id/clear"
        android:checkable="false"
        android:title="@string/清理画布"
        android:icon="@drawable/clean" />

</menu>