<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/画笔"
        android:showAsAction="always"
        android:icon="@drawable/brush"
        tools:ignore="AppCompatResource">
        <menu>
            <group android:checkableBehavior="single"
                android:id="@+id/bush_group">
                <item android:id="@+id/draw_default"
                    android:title="@string/铅笔"
                    android:checked="true"
                    android:icon="@drawable/pencil" />
                <item android:id="@id/draw_line"
                    android:title="@string/直线"
                    android:icon="@drawable/line"/>
                <item android:id="@+id/draw_circle"
                    android:title="@string/圆形"
                    android:icon="@drawable/circle"/>
                <item android:id="@+id/draw_rectangle"
                    android:title="@string/长方形"
                    android:icon="@drawable/rectangle"/>
                <item android:id="@+id/draw_square"
                    android:title="@string/椭圆"
                    android:icon="@drawable/oval"/>
                <item android:id="@+id/draw_pen"
                    android:title="@string/任意"
                    android:icon="@drawable/pen"/>
            </group>
        </menu>
    </item>

</menu>